# mcp-server-deepseek

./: .env.example  Makefile  README.md  pyproject.toml
src/mcp_server_deepseek/: __init__.py  server.py
